fix excess shading behind video

--- a/public/css/style-2.css
+++ b/public/css/style-2.css
@@ -2981,7 +2981,7 @@ table.leaderboard h3 {
     position: relative;
     /*width: 400px;*/
     /*height: 250px;*/
-    background-color: silver;
+    /*background-color: silver;*/
     z-index: 0;
 }
 
